Fix contrast color on disabled inputs

--- a/src/utils/decorators/input/input.scss
+++ b/src/utils/decorators/input/input.scss
@@ -98,7 +98,7 @@
   &[disabled] {
     background-color: $slate-tint-85 !important; // this is the correct use of !important
     border-color: $slate-tint-85 !important; // this is the correct use of !important
-    color: $black-20 !important; // this is the correct use of !important
+    color: $black-60 !important; // this is the correct use of !important
 
     &:active,
     &:focus,
